Add LinkedIn profile support
